z-index für verbreiterung kleiner als fixed header

--- a/css/piratenkleider.css
+++ b/css/piratenkleider.css
@@ -2471,7 +2471,7 @@ img.wp-smiley {
     position: absolute;
     top: 10px;
     right: 10px;    
-    z-index: 99;
+    z-index: 50;
     
 }    
 
